# openssl-wasm

./: build.sh
opensslTest/: .gitignore  CMakeLists.txt  compile_commands.json  readme.txt
opensslTest/src/: alg.c  alg.h  opensslTest.c  sm2_key.c  sm2_key.h  util.c  util.h
precompiled/: mybuild.sh
vueOpenSSL/: README.md  package-lock.json  package.json  vite.config.js
vueOpenSSL/public/: openssl_func.wasm
vueOpenSSL/src/: App.vue
vueOpenSSL/src/crypto/: commonCrypto.js  cryptoApi.js  cryptoApi.ts  gmCrypto.js  opensslCrypto.js  openssl_func.html  openssl_func.js
vueOpenSSL/src/utils/: hexUtil.js
